# job-sera-fastapi

./: .gitignore  alembic.ini  job-sera.db  main.py  model_folder_strcutre.txt  pyproject.toml  requirements.txt  sample-env  schemas.py  vercel.json
alembic/: env.py
alembic/versions/: 5ed327e80c76_initial_migration.py  6a7686e21955_create_mot_created_model.py  6da1807c5fe3_agina_regenrated_migrations.py  77a9bd345503_create_mot_created_model.py  86c7b24f3f92_is_deleted_key_in_user.py  9249e679bfde_added_tempotp_folder.py  9f5a27579788_regenrated_all_my_migrations.py
app/: main.py
app/core/: database.py  env_config.py  exception_handler.py  logger.py
app/crud/: employer.py  user_profile.py
app/mcp_servers/: __init__.py  companies.py  employers.py  job_applications.py  jobs.py  saved_jobs.py  user_notifications.py  user_profiles.py  users.py
app/models/: company.py  employer.py  job_applications.py  jobs.py  saved_jobs.py  user_notification.py  user_profile.py  users.py
app/routes/: company.py  employer.py  job_applications.py  jobs.py  saved_jobs.py  user.py  user_notification.py  user_profile.py
app/schema/: common.py  company.py  job_applications.py  saved_jobs.py  user_notification.py  users.py
app/schemas/: company.py  employer.py  job_applications.py  jobs.py  saved_jobs.py  user_notification.py  user_profile.py  users.py
app/services/: __init__.py  company_service.py  employer_service.py  job_application_service.py  job_service.py  notification_service.py  profile_service.py  saved_job_service.py  user_service.py
db/: job-sera.db
(+5 files in other folders)
